# pymindwave2

./: 404.html  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  test2.csv
.github/workflows/: ci.yml  docs.yml  run_test.yml
api/enums/: index.html
api/events/: index.html
api/headset/: index.html
api/logger/: index.html
api/session/: index.html
api/tg_connector/: index.html
docs/: examples.md  index.md  installation.md  quickstart.md
docs/api/: enums.md  events.md  headset.md  logger.md  session.md  tg_connector.md
examples/: index.html
installation/: index.html
mindwave/: __init__.py  connector.py  data.py  headset.py  session.py  stream_parser.py
mindwave/utils/: daemon_async.py  event_manager.py  logger.py  singleton_meta.py  stream_parser.py
quickstart/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_connector.py  test_headset.py  test_session.py
ui/: acquisitioner.py  error_dialog.py  main_window.py
util/: connection_state.py  daemon_async.py  event_handler.py  event_manager.py  logger.py
